first working route

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <title>Mossy Mood Tracker</title>
 
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script>
+    <!-- Axios/CORS -->
+    <script  src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- <script>
       console.log(axios)
-    </script>
+    </script> -->
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- My CSS -->
@@ -16,6 +17,9 @@
 
   <body>
     <h1>Mossy Mood Tracker :)</h1>
+    <section id='userList'>
+
+    </section>
 
     <!-- Bootstrap jQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -24,6 +28,6 @@
     <!-- Bootstrap JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- My JavaScript -->
-    <script type="text/javascript" src="./index.js"></script>
+    <script defer type="text/javascript" src="./index.js"></script>
   </body>
 </html>
