--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
 
       <div class="last-reported-container">
         <div class="last-reported">
-          <!-- {id: 1, mood: 'indifferent', time_of_day: 'morning', users_id: 1, toys_id: 2, foods_id: 4} -->
           <div class="row">
             <h5>Last Reported Mood:</h5><span class="date">Date & Time</span>
           </div>
@@ -114,14 +113,17 @@
           <div class="row">
             <h6>What time of day is it?</h6>
             <div id="morning" class="col-sm">
+              <!-- <img src="/images/day/if_weather-07_1530387.png"> -->
               <img src="/images/day/if_weather-07_1530387.png">
               <p>Morning</p>
             </div>
             <div id="afternoon" class="col-sm">
+              <!-- <img src="/images/day/if_weather-01_1530392.png"> -->
               <img src="/images/day/if_weather-01_1530392.png">
               <p>Afternoon</p>
             </div>
             <div id="evening" class="col-sm">
+              <!-- <img src="/images/day/if_weather-18_1530375.png"> -->
               <img src="/images/day/if_weather-18_1530375.png">
               <p>Evening</p>
             </div>
@@ -131,8 +133,8 @@
           <div class="row">
             <h6>What Mood was Mossy in?</h6>
             <div id="happy" class="col-sm">
-              <!-- <img src="/images/mossy/happy-mossy1.png" alt="happy-mossy"> -->
-              <img src="/images/mossy/happy-mossy2.jpg" alt="happy-mossy">
+              <img src="/images/mossy/happy-mossy1.png" alt="happy-mossy">
+              <!-- <img src="/images/mossy/happy-mossy2.jpg" alt="happy-mossy"> -->
               <p>Happy</p>
             </div>
             <div id="indifferent" class="col-sm">
@@ -145,7 +147,7 @@
             </div>
           </div>
 
-          <!-- Toy -->
+          <!-- Toys -->
           <div id="toy-eggplant" class="row">
             <h6>Did Mossy play with any toys?</h6>
             <div class="col-sm">
@@ -166,7 +168,7 @@
             </div>
           </div>
 
-          <!-- Food -->
+          <!-- Foods -->
           <div class="row">
             <h6>Did Mossy have any food?</h6>
             <div id="food-bacon" class="col-sm">
@@ -188,8 +190,9 @@
           </div>
 
           <div class="submit">
-            <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+            <button id="submit" class="btn btn-primary btn-lg" type="submit">Submit</button>
           </div>
+
         </form>
       </div>
     </div>
