update submit success and disable

--- a/index.html
+++ b/index.html
@@ -50,16 +50,22 @@
         <div id="avg-moods" class="row">
           <h6>Mossy's Average Moods</h6>
           <div id="avg-morning" class="col-sm">
-            <p>Morning</p>
+            <p class=avg-title>Morning</p>
             <img src="http://via.placeholder.com/250x250" alt="morning-image">
+            <p class='morning-toy'>Best Toy: Weed Ball</p>
+            <p class='morning-food'>Best Food: Bacon</p>
           </div>
           <div id="avg-afternoon" class="col-sm">
-            <p>Afternoon</p>
+            <p class=avg-title>Afternoon</p>
             <img src="http://via.placeholder.com/250x250" alt="afternoon-image">
+            <p class='afternoon-toy'></p>
+            <p class='afternoon-food'></p>
           </div>
           <div id="avg-evening" class="col-sm">
-            <p>Evening</p>
+            <p class=avg-title>Evening</p>
             <img src="http://via.placeholder.com/250x250" alt="evening-image">
+            <p class='evning-toy'></p>
+            <p class='evening-food'></p>
           </div>
         </div>
       </div>
