--- a/index.html
+++ b/index.html
@@ -70,17 +70,16 @@
         </div>
       </div>
 
-      <!-- Report New Mood Button -->
+      <!-- Submit New Mood Button -->
       <div class="button-container">
-        <button type="button" id="reportNewMood" class="btn btn-outline-primary">Report a New Mood</button>
+        <button type="button" id="submitNewMood" class="btn btn-outline-primary">Submit a New Mood</button>
       </div>
 
       <!-- Last Reported Mood -->
       <div class="last-reported-container">
         <div class="last-reported">
           <div id="last-reported-header" class="row">
-            <!-- <h5 class="lastReported"></h5> -->
-            <h5>Last Reported: </h5><span class="lastDate">Date & Time</span>
+            <h5>Last Report: </h5><span class="lastDate"></span>
           </div>
 
           <div class="row lastData">
